# PolyLibs

./: .gitignore  PolyLibs.spec  README.md  batch_footprints.py  batch_generate.py  bug_report.md  build_minimal.py  extract_all_pkg_specs.py  extract_pkg_specs.py  handoff.md  polylibs.bat  polylibs_gui.py  report.md  start.py  update_pkg_db.py  user_guide.md  verify_batch.py  verify_footprint.py  公众号文章_PolyLibs.md
PolyLibs/: README.md  pyproject.toml  requirements.txt
PolyLibs/polylibs/: __init__.py  __main__.py  _qr_data.py  classifier.py  cli.py  geometry.py  gui.py  library.py  manifest.py  models.py  parser.py
PolyLibs/polylibs/generators/: altium.py  base.py  cadence.py  kicad.py  pads.py  symbol_sections.py
PolyLibs/scripts/: extend_pkg_db.py
PolyLibs/tests/: __init__.py  conftest.py  test_cadence_scripts.py  test_classifier.py  test_cli.py  test_generators.py  test_geometry.py  test_gui.py  test_integration.py  test_library.py  test_manifest.py  test_models.py  test_new_vendor.py  test_parser.py  test_scaffold.py  test_symbol_sections.py
data/: pkg_db.json
docs/superpowers/plans/: 2026-07-11-fpga-libs.md  2026-07-14-vendor-aware-model-expansion-report.md  2026-07-14-vendor-aware-model-expansion.md  2026-07-15-new-vendor-test-plan.md  2026-07-15-reduce-dist-size-plan.md
docs/superpowers/specs/: 2026-07-11-fpga-libs-design.md  2026-07-14-vendor-aware-model-expansion-design.md  2026-07-15-new-vendor-test-design.md  2026-07-15-reduce-dist-size-design.md  model-expansion-user-guide.md
pinout_file/example/example_series/: ex1csg324.csv
(+167 files in other folders)
