[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polylibs"
version = "0.1.0"
requires-python = ">=3.10"
description = "Xilinx FPGA schematic symbol and PCB footprint generator"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["polylibs"]
